# innovate-nation

./: .gitignore  README.md  asos_clothes.csv  clean.py  new.csv  pyproject.toml  run_scraper.py  scraper.py
.github/workflows/: ci.yml
cleaner/: __main__.py  clean.py
cleaner/tests/: test.csv  test_clean.py
scraper/: asos_clothes.csv  run_scraper.py  scraper.py
src/: clean.py  import.py
src/tests/: test.csv  test_clean.py
tests/: test_clean.py
