[tool.poetry]
name = "innovate-nation"
version = "0.1.0"
description = ""
authors = ["vhuni", "wadirmalik1", "tjkuson", "Zainu-123"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ssort = "^0.11.6"
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
